# Crud-flask

./: .env.exemplo  .gitignore  config.py  crud.db  pyproject.toml  readme.md  wsgi.py
app/: __init__.py  books.py  model.py  pessoas.py  serializer.py
migrations/versions/: 0f17477e849a_.py  c623c49d0513_.py
tests/: test_rotas_crud_flask.py
